--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -27,7 +27,7 @@
 
     <nav class="bg-blue-500 p-4">
         <div class="max-w-screen-lg mx-auto flex justify-between items-center">
-            <a href="{{ url_for('home') }}" class="text-white
+            <a href="{{ url_for('main.home_page') }}" class="text-white
     <div class="max-w-screen-lg mx-auto p-4">
         {% block content %}
         {% endblock %}
