--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -14,7 +14,6 @@
     <script src="https://unpkg.com/htmx.org@2.0.3" integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq" crossorigin="anonymous"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css" />
-
     <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
 
     <!-- Custom files -->
@@ -27,7 +26,12 @@
 
     <nav class="bg-blue-500 p-4">
         <div class="max-w-screen-lg mx-auto flex justify-between items-center">
-            <a href="{{ url_for('main.register') }}" class="text-white
+            <a href="{{ url_for('main.register') }}" class="text-white">
+                Register
+            </a>
+        </div>
+    </nav>
+
     <div class="max-w-screen-lg mx-auto p-4">
         {% block content %}
         {% endblock %}
