--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -6,8 +6,43 @@
 
 {% block content %}
 
-<h1 class="mt-4 mb-6 text-2xl leading-none tracking-tight text-white md:text-3xl lg:text-4xl">
-    Login
-</h1>
+{% for categ, message in get_flashed_messages(with_categories = true) %}
+<div class="alert alert-{{categ}}" style="position: relative;">
+    <span>{{ message }}</span>
+    <button type="button" data-bs-dismiss="alert" aria-label="Close" style="position: absolute; right: 0; background: none; border: none;">
+        <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M6 18L18 6M6 6l12 12" />
+        </svg>
+    </button>
+</div>
+{% endfor %}
 
+    <h1 class="mt-4 mb-6 text-2xl leading-none tracking-tight text-white md:text-3xl lg:text-4xl">
+        Login
+    </h1>
+
+    <form method="POST" class="form-control">
+        {{ form.hidden_tag() }}
+        
+        {{ form.username.label(class="form-label") }} 
+        
+        {{ form.username(class="form-control") }}
+        
+        {{ form.password.label(class="form-label") }} 
+    
+        {{ form.password(class="form-control") }}
+        <br/>
+
+        {{ form.submit(class="btn btn-dark mb-3") }}
+
+    </form>
 {% endblock %}
