--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -45,4 +45,8 @@
         {{ form.submit(class="btn btn-dark mb-3") }}
 
     </form>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 {% endblock %}
