--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -21,23 +21,7 @@
     <!-- Custom files -->
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
 
-    <!-- <div class="join">
-        <div>
-          <div>
-            <input class="input input-bordered join-item" placeholder="Search" />
-          </div>
-        </div>
-        <select class="select select-bordered join-item">
-          <option disabled selected>Filter</option>
-          <option>Sci-fi</option>
-          <option>Drama</option>
-          <option>Action</option>
-        </select>
-        <div class="indicator">
-          <span class="indicator-item badge badge-secondary">new</span>
-          <button class="btn join-item">Search</button>
-        </div>
-      </div> -->
+
 
     {% block extra_head %}
     {% endblock %}
@@ -57,10 +41,9 @@
 
 
 
-
         
 
-        {% endblock %}
+        {% endblock content %}
     </div>
     
 </body>
