--- a/src/templates/transactions.html
+++ b/src/templates/transactions.html
@@ -16,38 +16,71 @@
           </svg>
           
 
-        TRANSACTIONS LIST 
+        TRANSACTIONS LIST
     </h1>
+    <div class = "relative overflow-x-auto text-white">
 
-    <div class=" relative overflow-x-auto text-white" >
+        <div class = "flex flex-col-reverse md:grid md:grid-cols-4 md:gap4">
+             <!-- 3 de cuatro columnas para la tabla   -->
+             <div class = "col-span-3 me-4">
+                {% if transactions %}
+                        <table class = "table"   id="transaction-container">
+                            <thead class = "text-xs text-white uppercase">
+                            <tr>
+                                <th class="px-6 py-3" >Date</th>
+                                <th class="px-6 py-3" >Category</th>
+                                <th class="px-6 py-3" >Type</th>
+                                <th class="px-6 py-3" >Amount</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                                {% for transaction in transactions %}
+                                    <tr class="text-sm">
+                                        <td class="px-6 py-4">{{ transaction.date.strftime('%Y-%m-%d') }}</td>
+                                        <td class="px-6 py-4">{{ transaction.category_id }}</td>
+                                        <td class="px-6 py-4">{{ transaction.type }}</td>
+                                        <td class="px-6 py-4">{{ transaction.amount }}</td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+            
+                        </table>   
+                {% else %}
+                    <p class="text-white">No transactions found.</p>
+            
+                {% endif %}
+            </div>
 
-    {% if transactions %}
-            <table class = "table">
-                <thead class = "text-xs text-white uppercase">
-                <tr>
-                    <th class="px-6 py-3" >Date</th>
-                    <th class="px-6 py-3" >Category</th>
-                    <th class="px-6 py-3" >Type</th>
-                    <th class="px-6 py-3" >Amount</th>
-                </tr>
-                </thead>
-                <tbody>
-                    {% for transaction in transactions %}
-                        <tr class="text-sm">
-                            <td class="px-6 py-4">{{ transaction.date.strftime('%Y-%m-%d') }}</td>
-                            <td class="px-6 py-4">{{ transaction.category_id }}</td>
-                            <td class="px-6 py-4">{{ transaction.type }}</td>
-                            <td class="px-6 py-4">{{ transaction.amount }}</td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
 
-            </table>   
-    {% else %}
-        <p class="text-white">No transactions found.</p>
+             <!-- 1 de cuatro columnas para el formulario de filtros -->
+        <div class = "col-span-1">
+            <form hx-get="/transactions" hx-target="#transaction-container" hx-swap="outerHTML">
+                <!-- Category Filter -->
+                <div class="mb-2 form-control">
+                    <label for="category" class="text-white text-sm">Category</label>
+                    <input type="text" name="category" id="category" class="input input-bordered" placeholder="Enter category..." />
+                </div>
+            
+                <!-- Date Filter -->
+                <div class="mb-2 form-control">
+                    <label for="date" class="text-white text-sm">Date</label>
+                    <input type="text" name="date" id="date" class="input input-bordered" placeholder="YYYY-MM-DD" />
+                </div>
+            
+                <!-- Type Filter -->
+                <div class="mb-2 form-control">
+                    <label for="type" class="text-white text-sm">Type</label>
+                    <input type="text" name="type" id="type" class="input input-bordered" placeholder="Enter type (e.g., income or expense)..." />
+                </div>
+            
+                <button type="submit" class="btn btn-neutral mt-4">Search</button>
+            </form>
+            
+        </div>
 
-    {% endif %}
-</div>
+        </div>  
+    </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     
 {% endblock %}
