--- a/src/templates/partials/transaction_table.html
+++ b/src/templates/partials/transaction_table.html
@@ -1,5 +1,5 @@
 
-<div id="transaction-container">
+<div id="transaction-container"  class = "text-white">
 <h1 class="mt-4 mb-6 prose prose-2x1 text-white">
     Totals
 </h1>
@@ -22,10 +22,14 @@
 
 <br>
 
+<div class="flex justify-between items-center mt-4 mb-6">
+
 <h1 class="mt-8 mb-6 prose prose-2x1 text-white">
     Transactions
 </h1>
-
+<a href="/transactions/add" class="btn btn-neutral">Add Transactions</a>
+<a href="/transactions/export" class="btn btn-neutral">Export Transactions</a>
+</div>
 <table class="table">
     <thead class="text-xs text-white uppercase">
         <tr>
