--- a/src/templates/add_transactions.html
+++ b/src/templates/add_transactions.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+<div class="text-white">
 
 {% for categ, message in get_flashed_messages(with_categories = true) %}
 <div class="alert alert-{{categ}}" style="position: relative;">
@@ -56,4 +57,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     
+</div>
 {% endblock %}
