--- a/src/templates/partials/transaction_table.html
+++ b/src/templates/partials/transaction_table.html
@@ -24,11 +24,20 @@
 
 <div class="flex justify-between items-center mt-4 mb-6">
 
-<h1 class="mt-8 mb-6 prose prose-2x1 text-white">
-    Transactions
-</h1>
-<a href="/transactions/add" class="btn btn-neutral">Add Transactions</a>
-<a href="/transactions/export" class="btn btn-neutral">Export Transactions</a>
+
+    <h1 class="mt-8 mb-6 prose prose-2x1 text-white">
+        Transactions
+    </h1>
+
+    <a href="/transactions/add"
+        
+        class="cursor-pointer">
+            
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5m-13.5-9L12 3m0 0 4.5 4.5M12 3v13.5" />
+        </svg>
+    </a>
+
 </div>
 <table class="table">
     <thead class="text-xs text-white uppercase">
