--- a/src/templates/partials/transaction_table.html
+++ b/src/templates/partials/transaction_table.html
@@ -29,15 +29,28 @@
         Transactions
     </h1>
 
-    <a href="/transactions/add"
-        
-        class="cursor-pointer">
-            
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5m-13.5-9L12 3m0 0 4.5 4.5M12 3v13.5" />
-        </svg>
-    </a>
+    <div class="flex items-center space-x-4">
 
+            <a href="/transactions/upload"
+                
+                class="cursor-pointer">
+                    
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5m-13.5-9L12 3m0 0 4.5 4.5M12 3v13.5" />
+                </svg>
+            </a>
+
+
+            <a href="/transactions/add"
+                
+                class="cursor-pointer">
+                    
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                </svg>
+                
+            </a>
+    </div>
 </div>
 <table class="table">
     <thead class="text-xs text-white uppercase">
