--- a/src/templates/upload_transactions.html
+++ b/src/templates/upload_transactions.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head_title %}
-    ADD TRANSACTIONS | Personal Finance Tracker
+    IMPORT TRANSACTIONS | Personal Finance Tracker
 {% endblock %}
 
 {% block content %}
@@ -42,16 +42,17 @@
             <!-- 3 de cuatro columnas para la tabla   -->
                 <form method="POST"  hx-swap="outerHTML" enctype="multipart/form-data">
                     <label for ="bank" class="text-white text-sm">Select Bank</label>
-                    <select name="bank" id="bank" class="form-select">
+                    <select name="bank" id="bank" class="select select-bordered mt-2 mb-2">
                         <option value="Nu">Nubank</option>
                         <option value="It">Itau*</option>
                         <option value="Bb">Banco do Brasil*</option>
                         <option value="Br">Bradesco*</option>
                         <option value="Rc">Rico*</option>
                     </select>
-                        <label for="file" class="text-white text-sm">Please inport only csv files</label>
-                        <input type="file" name="file" id="file" required/>
-
+                    <br>
+                    <br>
+                        <label for="file" class="text-white text-sm">Please import only .csv files</label>
+                        <input type="file" class="file-input file-input-bordered w-full max-w-xs" />
                     <button type="submit" class="btn btn-neutral mt-4">Import</button>
                 </form>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
