Enhance transaction filtering by user and improve file upload error handling; update UI for transaction forms

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -35,11 +35,11 @@
         
         {{ form.username.label(class="form-label") }} 
         
-        {{ form.username(class="form-control") }}
+        {{ form.username(class="input input-bordered") }}
         
         {{ form.password.label(class="form-label") }} 
     
-        {{ form.password(class="form-control") }}
+        {{ form.password(class="input input-bordered") }}
         <br/>
 
         {{ form.submit(class="btn btn-dark mb-3") }}
