--- a/src/templates/add_transaction.html
+++ b/src/templates/add_transaction.html
@@ -15,7 +15,7 @@
 </h1>
 
 <!-- FORM to add a new transaction -->
-<div class="relative overflow-x-auto text-white">
+<div class="flex text-white">
     <form method="POST" hx-post="/transactions/add" hx-swap="outerHTML">
 
         <!-- Date -->
