--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -28,13 +28,13 @@
 </head>
 <body>
 
-    <nav class="bg-blue-500 p-4">
+    <!-- <nav class="bg-blue-500 p-4">
         <div class="max-w-screen-lg mx-auto flex justify-between items-center">
             <a href="{{ url_for('main.register') }}" class="text-white">
                 Register
             </a>
         </div>
-    </nav>
+    </nav> -->
 
     <div class="max-w-screen-lg mx-auto p-4">
         {% block content %}
