--- a/src/templates/transactions.html
+++ b/src/templates/transactions.html
@@ -44,10 +44,21 @@
              <!-- 3 de cuatro columnas para la tabla   -->
              <div class = "col-span-3 me-4 " >
                 {% include 'partials/transaction_table.html' %}
+                <div class="pagination mt-4">
+                    {% if pagination.has_prev %}
+                        <a href="?page={{ pagination.prev_num }}" class="btn btn-neutral">Previous</a>
+                    {% endif %}
+                
+                    <span class="mx-2">Page {{ pagination.page }} of {{ pagination.pages }}</span>
+                
+                    {% if pagination.has_next %}
+                        <a href="?page={{ pagination.next_num }}" class="btn btn-neutral">Next</a>
+                    {% endif %}
+                </div>
+                
             </div>
-
-
-             <!-- 1 de cuatro columnas para el formulario de filtros -->
+ 
+            <!-- 1 de cuatro columnas para el formulario de filtros -->
         <div class = "col-span-1">
             <form hx-get="/transactions" hx-target="#transaction-container" hx-swap="outerHTML">
                 <!-- Category Filter -->
