--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -21,7 +21,7 @@
     <!-- Custom files -->
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
 
-
+    <script src="https://cdn.plot.ly/plotly-2.35.2.min.js" charset="utf-8"></script>
 
     {% block extra_head %}
     {% endblock %}
