--- a/src/templates/transactions_charts.html
+++ b/src/templates/transactions_charts.html
@@ -35,9 +35,19 @@
     TRANSACTIONS CHARTS
 </h1>
 <div class = "relative overflow-x-auto text-white">
-    <div class = "flex flex-col-reverse">
-      
-        <form hx-get="/transactions" hx-target="#transaction-container" hx-swap="outerHTML">
+
+    <div class = "flex flex-col-reverse md:grid md:grid-cols-4 md:gap4">
+         <!-- 3 de cuatro columnas para la tabla   -->
+         <div class = "col-span-3 me-4 ">
+            <div id = "transaction-container-char">
+                {% include 'partials/transaction_chart.html' %}
+            </div>
+            
+         </div>
+
+        <!-- 1 de cuatro columnas para el formulario de filtros -->
+    <div class = "col-span-1">
+        <form hx-get="/transactions_charts" hx-target="#transaction-container-char" hx-swap="innerHTML">
             <!-- Category Filter -->
             <div class="mb-2 form-control">
                 <label for="category" class="text-white text-sm">Category</label>
@@ -58,8 +68,11 @@
         
             <button type="submit" class="btn btn-neutral mt-4">Search</button>
         </form>
+        
     </div>
-    </div>
+
+    </div>  
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 
