--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -36,7 +36,7 @@
         </div>
     </nav> -->
 
-    <div class="max-w-screen-lg mx-auto p-4">
+    <div class="max-w-screen-xl mx-auto p-8">
         {% block content %}
 
 
