--- a/src/templates/partials/transaction_table.html
+++ b/src/templates/partials/transaction_table.html
@@ -51,6 +51,9 @@
                 </a>
         </div>
     </div>
+
+
+
     <table class="table">
         <thead class="text-xs text-white uppercase">
             <tr>
@@ -96,6 +99,28 @@
             {% endif %}
         </tbody>
     </table>
+
+    <div class="pagination mt-4">
+        {% if pagination.has_prev %}
+            <button 
+                hx-get="?page={{ pagination.prev_num }}{% for key, values in request.args.lists() %}{% for value in values %}&{{ key }}={{ value|urlencode }}{% endfor %}{% endfor %}" 
+                class="btn btn-neutral" 
+                hx-target="#transaction-container" 
+                hx-swap="outerHTML">Previous</button>
+        {% endif %}
+        
+        <span class="mx-2">Page {{ pagination.page }} of {{ pagination.pages }}</span>
+        
+        {% if pagination.has_next %}
+            <button 
+                hx-get="?page={{ pagination.next_num }}{% for key, values in request.args.lists() %}{% for value in values %}&{{ key }}={{ value|urlencode }}{% endfor %}{% endfor %}" 
+                class="btn btn-neutral" 
+                hx-target="#transaction-container" 
+                hx-swap="outerHTML">Next</button>
+        {% endif %}
+    </div>
+    
+            
 
 </div>
 <!-- Navigation section for pagination controls -->
