--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -33,6 +33,16 @@
                         Charts
                 </a>
             </li>
+
+            <li>
+                <a href="{{ url_for('main.portfolio') }}" 
+                    class="block py-2 pl-3 pr-4 text-white rounded md:p-0" 
+                    aria-current="page">
+                        Portfolio
+                </a>
+            </li>
+
+
         {% else %}
             <li>
                 <a href="{{ url_for('main.login') }}" 
